--- a/GoogleAnalyticsTracker.WP7/packages.config
+++ b/GoogleAnalyticsTracker.WP7/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="System.Threading.Tasks" version="2.1.2" />
+  <package id="Microsoft.Bcl" version="1.0.11-beta" targetFramework="wp71" />
 </packages>
